@@ -1,7 +1,7 @@
 				
                                 
-                                BSOpack 0.01
-				~~~~~~~~~~~~
+                                BSOpack 0.1
+				~~~~~~~~~~~
                                 
 
 1. Introduction
