@@ -10,7 +10,7 @@ SRC_DIR=../src/
 WARNFLAGS=-Wall
 OPTCFLAGS=-c -s -O3 -fomit-frame-pointer -fstrength-reduce -fPIC
 DEBCFLAGS=-c -ggdb
-ADDCDEFS=-DHAS_POPEN
+ADDCDEFS=
 DEBUG=1
 SHORTNAMES=0
 OSTYPE=UNIX
