@@ -2,5 +2,6 @@
 #define _LOG_H
 
 void Log(char level, char *msg,...);
+void Debug(char *msg,...);
 
 #endif
